--- a/src/index.html
+++ b/src/index.html
@@ -6,16 +6,17 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- PWA Meta Tags -->
-  <meta name="theme-color" content="#1976d2">
-  <meta name="description" content="Hamza Traders POS System">
-  <link rel="icon" type="image/x-icon" href="favicon.png">
-  <link rel="manifest" href="manifest.webmanifest">
-  
-  <!-- iOS Meta Tags -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="default">
-  <meta name="apple-mobile-web-app-title" content="Hamza Trader">
-  <link rel="apple-touch-icon" href="icons/icon-192x192.png">
+<meta name="theme-color" content="#1976d2">
+<meta name="description" content="Hamza Traders POS System">
+<link rel="icon" type="image/x-icon" href="favicon.png">
+<link rel="manifest" href="manifest.webmanifest">
+
+<!-- iOS Meta Tags -->
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="default">
+<meta name="apple-mobile-web-app-title" content="Hamza Trader">
+<link rel="apple-touch-icon" href="icons/icon-192x192.png">
+
 </head>
 <body>
   <app-root></app-root>
