--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <link rel="icon" type="image/x-icon" href="favicon.png">
 <link rel="manifest" href="manifest.webmanifest">
 
-<meta name="mobile-web-app-capable" content="yes">
+<!-- <meta name="mobile-web-app-capable" content="yes"> -->
 
 <link rel="apple-touch-icon" href="icons/icon-192x192.png">
 
