added new changes and update overall naming

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MyPosInventory</title>
+  <title>Hamza Traders POS</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- PWA Meta Tags -->
 <meta name="theme-color" content="#1976d2">
-<meta name="description" content="Hamza Traders POS System">
-<link rel="icon" type="image/x-icon" href="favicon.png">
+<meta name="description" content="Hamza Traders Hamza Traders POS">
+    <link rel="icon" type="image/x-icon" href="././assets/favicon-32x32.png">
 <link rel="manifest" href="manifest.webmanifest">
 
 <!-- <meta name="mobile-web-app-capable" content="yes"> -->
