--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Hamza Traders POS</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- PWA Meta Tags -->
-<meta name="theme-color" content="#1976d2">
-<meta name="description" content="Hamza Traders Hamza Traders POS">
-<link rel="manifest" href="manifest.webmanifest">
-    <link rel="icon" type="image/x-icon" href="././assets/favicon-32x32.png">
-
-<!-- <meta name="mobile-web-app-capable" content="yes"> -->
-
-<link rel="apple-touch-icon" href="icons/icon-192x192.png">
-
-</head>
-<body>
-  <app-root></app-root>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Hamza Traders POS</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    
+    <!-- PWA Meta Tags -->
+    <meta name="theme-color" content="#1976d2" />
+    <meta name="description" content="Hamza Traders POS System" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="Hamza Trader">
+    
+    <link rel="manifest" href="manifest.webmanifest" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" href="assets/icons/icon-192x192.png" />
+  </head>
+  <body>
+    <app-root></app-root>
+    <noscript>Please enable JavaScript to continue using this application.</noscript>
+  </body>
 </html>
